Bug: none
Selenium Harness: add utility called ZimbraURI to help manage the browser URL